Startings of a sprite renderer.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="Grid.h" />
     <ClInclude Include="GUIObject.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="LayerObject.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Panel.h" />
@@ -156,6 +157,8 @@
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundEffect.h" />
     <ClInclude Include="Sprite.h" />
+    <ClInclude Include="SpriteLayer.h" />
+    <ClInclude Include="SpriteRender.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TileButton.h" />
     <ClInclude Include="TileEditor.h" />
@@ -179,6 +182,8 @@
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="SpriteLayer.cpp" />
+    <ClCompile Include="SpriteRender.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="TileButton.cpp" />
     <ClCompile Include="TileEditor.cpp" />
